metaBMA 0.6.0
===========

* Remove meta_default() and plot_default()
* new function meta_ordered() for order-constrained study-effects in random-effects meta-analysis


metaBMA 0.5.0
===========

* Major refactoring (breaks compatibiltiy with previous versions)
* Possible to provide data frame via argument 'data'
* Removed arguments "d.par" and "tau.par": priors are now defined via d=prior(...), tau=prior(...)
* Possibility to fit random and fixed effects meta-analysis with moderators in stan (with JZS priors)
* Computation of log marginal likelihood with Stan samples and bridge sampling (via logml="stan")
* Improved numerical integration via integrate() [posterior distribution shifted to zero]


metaBMA 0.3.9
===========

* Updated citation for CRAN
* Added examples for meta_bma() and meta_random()
* Minor bug fixes


metaBMA 0.3.8
===========

* Data sets 'power_pose' and 'power_pose_unfamiliar' added
* Data set 'facial_feedback' added
* More informative description file
* Requirements for CRAN


metaBMA 0.3.0
===========

* First stable version
* High-level functions meta_bma() and meta_default() perform model averaging for standard models (fixed, random + H0, H1)
* Plotting functions for averaged/random-effects/fixed-effects meta-analysis via plot_forest() and plot_posterior()
* Meta-analysis models are fitted by meta_fixed() and meta_random()
* Effect estimates of fitted meta-analysis models can be averaged by bma()
* Inclusion Bayes factor are computed by inclusion()
* User-specified and default prior functions are specified via prior() [can be plottet via plot(prior)]