@@ -17,7 +17,7 @@ test_that("meta_fixed: logml for H0 is correct", {
   expect_equal(postprob/sum(postprob), c(.5, .5))
 
   # logml with Stan
-  f2 <- meta_fixed(yyy, SE, study, data = dat, logml = "stan", iter = 6000, warmup = 1000)
+  f2 <- meta_fixed(yyy, SE, study, data = dat, logml = "stan", iter = 3000, warmup = 500)
   expect_equal(f1$logml, f2$logml, tolerance = .01)
   expect_equal(f1$BF, f1a$BF, tolerance = .1)
   expect_equal(metaBMA:::loglik_fixed_H0(f1$data),
@@ -25,7 +25,7 @@ test_that("meta_fixed: logml for H0 is correct", {
 
   # different loglik for JZS
   expect_warning(f3 <- meta_fixed(yyy ~ xx, SE, study, data = dat,   # warning: JZS
-                                  logml = "stan", iter = 6000, warmup = 1000))
+                                  logml = "stan", iter = 3000, warmup = 500))
   expect_equal(f1$logml, f2$logml, tolerance = .01)
   expect_true(f1$logml["fixed_H1"] > f3$logml["fixed_H1"] + 1)
 })
@@ -33,18 +33,18 @@ test_that("meta_fixed: logml for H0 is correct", {
 
 test_that("meta_random: logml & estimates correct", {
 
-  f1 <- meta_random(yyy, SE, study, data = dat, logml = "int", summ="int",
-                    rel.tol = .Machine$double.eps)
-  f2 <- meta_random(yyy, SE, study, data = dat, logml = "stan", summ = "s",
-                    iter = 10000, logml_iter = 20000)
-  expect_equal(f1$logml, f2$logml, tolerance = .02)
+  f1 <- meta_random(yyy, SE, study, data = dat, logml = "int", summ="int", rel.tol = .01)
+  f2 <- meta_random(yyy, SE, study, data = dat, logml = "stan", summ = "stan",
+                    iter = 1000, logml_iter = 2000)
+  expect_equal(f1$logml, f2$logml, tolerance = .001)
   expect_equal(f1$BF, f2$BF, tolerance = .1)
-  expect_equal(f1$estimates[,1:7,drop=FALSE], f2$estimates[,1:7,drop=FALSE], tolerance = .03)
+  expect_equal(f1$estimates[,1:5], f2$estimates[,1:5], tolerance = .01)
+  expect_equal(f1$estimates[,6:7], f2$estimates[,6:7], tolerance = .03)
   expect_equal(f1$posterior_d(0) / f1$prior_d(0),
                f2$BF["random_H0","random_H1"], tolerance = .1)
 
   # check: logml for "random_H0" with bridgesampling
-  stanfit <- metaBMA:::meta_stan(f1$data, d = prior("0"), iter = 10000)
+  stanfit <- metaBMA:::meta_stan(f1$data, d = prior("0"), iter = 2000)
   bs <- bridgesampling:::bridge_sampler(stanfit, silent = TRUE, use_neff = FALSE)
   expect_equal(bs$logml, unname(f1$logml["random_H0"]), tolerance = .003)
 })
@@ -54,14 +54,14 @@ test_that("Stan models 'random_dstudy' and 'random' are equivalent", {
   dl <- list(y = dat$yyy, SE = dat$SE, N = length(dat$SE))
 
   dl$model <- "random"
-  stanfit1 <- metaBMA:::meta_stan(dl, iter = 10000)
+  stanfit1 <- metaBMA:::meta_stan(dl, iter = 2000)
   bs1 <- bridgesampling:::bridge_sampler(stanfit1, silent = TRUE, use_neff = FALSE)
 
   dl$model <- "random_dstudy"
-  stanfit2 <- metaBMA:::meta_stan(dl, iter = 10000)
+  stanfit2 <- metaBMA:::meta_stan(dl, iter = 2000)
   bs2 <- bridgesampling:::bridge_sampler(stanfit2, silent = TRUE, use_neff = FALSE)
 
-  expect_equal(bs1$logml, bs2$logml, tolerance = .01)
+  expect_equal(bs1$logml, bs2$logml, tolerance = .1)
   sel <- c("mean", "sd", "25%", "50%", "75%")
   expect_equal(summary(stanfit1, c("d", "tau"))$summary[,sel],
                summary(stanfit2, c("d", "tau"))$summary[,sel],
