@@ -15,22 +15,27 @@ test_that("bma works for fitted meta_* objects", {
   expect_silent(bb <- bma(list("a" = f1a, "b" = f1b)))
   postprob <- unname(bb$posterior_models[c(2,4)])
   expect_equal(postprob/sum(postprob), c(.5, .5), tolerance = .01)
+  expect_equal(f1a$estimates[,1:7], f1b$estimates[,1:7], tolerance = .02)
 
   expect_is(f1a$logml, "numeric")
   expect_is(f1a$BF, "matrix")
   expect_is(f1a$estimates, "matrix")
 
-  r1a <- meta_random(yyy, SE, study, data = dat)
-  r1b <- meta_random(yyy ~ 1, SE, study, data = dat, logml = "stan", summarize = "stan")
-  expect_silent(bb <- bma(list(a = r1a, b = r1b)))
+  r1a <- meta_random(yyy, SE, study, data = dat, summarize = "int",
+                     rel.tol = .Machine$double.eps^.1, iter = 100)
+  r1b <- meta_random(yyy ~ 1, SE, study, data = dat,
+                     logml = "stan", logml_iter = 2000, iter = 1000)
+  expect_silent(bb <- bma(list(a = r1a, b = r1b), rel.tol = .Machine$double.eps^.1))
   postprob <- unname(bb$posterior_models[c(2,4)])
-  expect_equal(postprob/sum(postprob), c(.5, .5), tolerance = .01)
+  expect_equal(postprob/sum(postprob), c(.5, .5), tolerance = .005)
+  expect_equal(r1a$estimates[,1:7], r1b$estimates[,1:7], tolerance = .05)
 
   expect_is(r1a$logml, "numeric")
   expect_is(r1a$BF, "matrix")
   expect_is(r1a$estimates, "matrix")
 
-  expect_silent(bb <- bma(list(a = f1a, b = f1b, c= r1a, d = r1b)))
+  expect_silent(bb <- bma(list(a = f1a, b = f1b, c= r1a, d = r1b),
+                          rel.tol = .Machine$double.eps^.1))
   mean_avg <- sum(bb$posterior_models * bb$estimates[-1,"mean"])
   expect_equal(mean_avg, bb$estimates["averaged","mean"], tolerance = .005)
 
@@ -40,10 +45,12 @@ test_that("bma works for fitted meta_* objects", {
 })
 
 test_that("meta_bma gives identical results for stan/integrate", {
-
-  mf_stan <- meta_bma(yyy, SE, study, dat, summarize = "stan", logml = "stan")
-  mf_int <- meta_bma(yyy, SE, study, dat, summarize = "int")
+  mf_stan <- meta_bma(yyy, SE, study, dat, summarize = "stan", logml = "stan",
+                      logml_iter = 2000, iter = 2000)
+  mf_int  <- meta_bma(yyy, SE, study, dat, summarize = "int",
+                      rel.tol = .Machine$double.eps^.1)
   expect_equal(mf_stan$estimates[,1:7], mf_int$estimates[,1:7], tolerance = .03)
+  expect_equal(mf_stan$BF, mf_int$BF, tolerance = .01)
 
   expect_silent(plot_forest(mf_stan))
   expect_silent(plot_forest(mf_int))
